[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Danielle Brook-Roberge <danielle@brook-roberge.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.8.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.4.2"
